# hyprland-app-timer

./: Cargo.toml  flake.nix  shell.nix
migrations/: 20221128191342_create_table.sql
src/: blocking_client.rs  blocking_db.rs  client.rs  db.rs  lib.rs  main.rs  server.rs
