[package]
name = "app-timer2"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_timer2"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
ipc-channel = "0.16.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.22.0", features = ["full"] }

ctrlc = { version = "3.2.3", features = ["termination"], optional = true }
log-panics = { version = "2.1.0", optional = true }
hyprland = { version = "0.3.7", optional = true }
log4rs = { version = "1.2.0", optional = true }
xcb = { version = "1.2.0", optional = true }

[features]
default = ["server"]
server = ["dep:hyprland", "dep:log4rs", "dep:xcb", "dep:log-panics", "dep:ctrlc"]
