[package]
name = "hyprland-app-timer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
ipc-channel = "0.16.0"
log = "0.4.17"
xdg = "2.5.2"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.22.0", features = ["full"] }

env_logger = { version = "0.10.0", optional = true }
ctrlc = { version = "3.2.3", features = ["termination"], optional = true }
hyprland = { version = "0.3.12", optional = true }
xcb = { version = "1.2.0", optional = true }

[features]
default = ["server"]
server = ["dep:hyprland", "dep:env_logger", "dep:xcb", "dep:ctrlc"]
